--- a/package.json
+++ b/package.json
@@ -2,25 +2,9 @@
   "name": "react-native-lyric",
   "version": "0.1.0",
   "description": "lyric,lrc,karaoke",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
-  "files": [
-    "src",
-    "lib",
-    "android",
-    "ios",
-    "cpp",
-    "react-native-lyric.podspec",
-    "!lib/typescript/example",
-    "!android/build",
-    "!ios/build",
-    "!**/__tests__",
-    "!**/__fixtures__",
-    "!**/__mocks__"
-  ],
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "source": "src/index.tsx",
   "scripts": {
     "test": "jest",
     "typescript": "tsc --noEmit",
@@ -33,8 +17,9 @@
   },
   "keywords": [
     "react-native",
-    "ios",
-    "android"
+    "lrc",
+    "lyric",
+    "karaoke"
   ],
   "repository": "https://github.com/hoanganhken97/react-native-lyric",
   "author": "Hoang Anh Ken <hoanganhken97@gmail.com> (https://github.com/hoanganhken97)",
@@ -53,17 +38,15 @@
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
-    "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^6.0.0",
     "jest": "^26.0.1",
-    "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-builder-bob": "^0.18.0",
+    "react-native-builder-bob": "^0.18.2",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
@@ -136,12 +119,16 @@
     "targets": [
       "commonjs",
       "module",
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json"
-        }
-      ]
+      "typescript"
     ]
-  }
+  },
+  "react-native": "src/index.ts",
+  "types": "lib/typescript/src/index.d.ts",
+  "files": [
+    "src",
+    "lib",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ]
 }
