--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "react-native-lyric",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "lyric,lrc,karaoke",
-  "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
-  "source": "src/index.tsx",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "microbundle-crl --no-compress -f es,cjs",
-    "dev": "microbundle-crl watch --no-compress -f es,cjs",
-    "prepublishOnly": "npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [
     "react-native",
@@ -38,12 +35,13 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^6.0.0",
     "jest": "^26.0.1",
+    "metro-react-native-babel-preset": "^0.70.0",
+    "microbundle-crl": "^0.13.11",
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3",
-    "microbundle-crl": "^0.13.11"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "*",
